# python-readelf

./: .gitignore  README.md  elfparser  pyproject.toml  q.x86_64  readelf  test.c  test.py
lib/elfparser/: __init__.py  const.py  elffile.py  err.py  header.py  helpers.py  maps.py  sections.py  segments.py
lib/elfparser/elf/: sections.py
lib/elfparser/parsers/: header.py
lib/readelf/: const.py  dt.xml  elffile.py  header.py  helpers.py  maps.py  memory.py  nnne.json  sections.py
lib/readelf/parsers/: __init__.py  dynamic.py  dynstr.py  dynsym.py  rel.py  rela.py  section_parser.py  strtab.py  symtab.py
readelf/: __init__.py  const.py  elffile.py  header.py  helpers.py  memory.py  sections.py  segments.py
readelf.egg-info/: PKG-INFO  SOURCES.txt
readelf/dwarf/: __init__.py  abbr.py  addrtab.py  aranges.py  die.py  dwarf.py  err.py  leb128.py  line.py  macro.py  meta.py  unit.py
readelf/dwarf/attribs/: __init__.py  as_int.py  attrib_parser.py  enum.py  lang.py  strp.py
readelf/dwarf/attribs/form/: __init__.py  addr.py  const.py  exprloc.py  flag.py  form_parser.py  ref.py  sec_offset.py  string.py  strp.py
readelf/dwarf/expression/: __init__.py  expression.py
readelf/dwarf/parsers/: __init__.py  array.py  base_type.py  die_parser.py  member.py  modified.py  struct.py  typedef.py  variable.py
readelf/parsers/: __init__.py  dynamic.py  dynsym.py  rel.py  rela.py  section_parser.py  strtab.py  symtab.py
tests/: a.out  corrupt  dwt  dwt.c  echo  init_fini_arrays.elf  nethack  python  renderer  simple.elf
