
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "readelf"
version = "1.0.2"
authors = [
	{name = "Adam Jenca", email = "jenca.a@gjh.sk"},
	]
description = "An ELF file reading library made in Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
	"Topic :: File Formats",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Development Status :: 3 - Alpha"
]
[project.urls]
Homepage = "https://github.com/jenca-adam/python-readelf"
Issues = "https://github.com/jenca-adam/python-readelf/issues"
GitHub = "https://github.com/jenca-adam/python-readelf"

